--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow">
     <div class="container">
-        <a class="navbar-brand fw-bold" href="index.html">Online Store</a>
+        <a class="navbar-brand fw-bold" href="/">Online Store</a>
         <div class="d-flex">
-            <a href="login.html" class="btn btn-outline-light me-2">Login</a>
-            <a href="register.html" class="btn btn-primary">Register</a>
+            <a href="/login" class="btn btn-outline-light me-2">Login</a>
+            <a href="/register" class="btn btn-primary">Register</a>
         </div>
     </div>
 </nav>
@@ -25,8 +25,8 @@
     <h1 class="display-4 fw-bold mb-3">Welcome to Our Store</h1>
     <p class="lead text-muted mb-4">Shop the best products with ease and security.</p>
     <div>
-        <a href="login.html" class="btn btn-lg btn-primary me-3">Login</a>
-        <a href="register.html" class="btn btn-lg btn-outline-secondary">Register</a>
+        <a href="/login" class="btn btn-lg btn-primary me-3">Login</a>
+        <a href="/register" class="btn btn-lg btn-outline-secondary">Register</a>
     </div>
 </main>
 
@@ -40,10 +40,10 @@
 
 <!-- Placeholder logic for JWT handling -->
 <script>
-    const jwtToken = localStorage.getItem("jwt");
+    const jwtToken = localStorage.getItem("jwtToken");
     const isValidJwt = jwtToken && jwtToken !== "INVALID"; // placeholder
     if (isValidJwt) {
-        window.location.href = "app.html";
+        window.location.href = "/app";
     }
 </script>
 </body>
