Added an order management page for the admin

--- a/src/pages/app.html
+++ b/src/pages/app.html
@@ -188,19 +188,7 @@
                     Analytics & Reports
                 </h5>
             </div>
-            <div class="col-md-6 mb-3">
-                <div class="card h-100 border-info">
-                    <div class="card-body text-center">
-                        <i class="bi bi-bar-chart display-4 text-info mb-3"></i>
-                        <h5 class="card-title">Sales Analytics</h5>
-                        <p class="card-text">View sales reports and performance metrics</p>
-                        <button class="btn btn-info" onclick="navigateToSection('admin-analytics')">
-                            <i class="bi bi-graph-up-arrow me-2"></i>
-                            View Analytics
-                        </button>
-                    </div>
-                </div>
-            </div>
+        
             <div class="col-md-6 mb-3">
                 <div class="card h-100 border-secondary">
                     <div class="card-body text-center">
@@ -264,7 +252,7 @@
                                         <i class="bi bi-currency-dollar fa-2x mb-2"></i>
                                         <h6>Revenue</h6>
                                         <h3 id="totalRevenue">$--</h3>
-                                        <small>This month</small>
+                                        <small>All time</small>
                                     </div>
                                 </div>
                             </div>
