Added Order Reports and fixed the system overview section of the dashboard

--- a/src/pages/app.html
+++ b/src/pages/app.html
@@ -110,20 +110,6 @@
         <div class="row mb-4">
             <div class="col-12">
                 <div class="card bg-gradient-primary text-white">
-                    <div class="card-body">
-                        <div class="row align-items-center">
-                            <div class="col">
-                                <h4 class="mb-1">
-                                    <i class="bi bi-shield-check me-2"></i>
-                                    Administrator Dashboard
-                                </h4>
-                                <p class="mb-0">Manage all aspects of your online store</p>
-                            </div>
-                            <div class="col-auto">
-                                <i class="bi bi-gear-fill fa-2x opacity-75"></i>
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
@@ -192,13 +178,13 @@
             <div class="col-md-6 mb-3">
                 <div class="card h-100 border-secondary">
                     <div class="card-body text-center">
-                        <i class="bi bi-file-earmark-text display-4 text-secondary mb-3"></i>
-                        <h5 class="card-title">System Reports</h5>
-                        <p class="card-text">Generate and download system reports</p>
-                        <button class="btn btn-secondary" onclick="navigateToSection('admin-reports')">
-                            <i class="bi bi-download me-2"></i>
-                            Generate Reports
-                        </button>
+                        <i class="bi bi-graph-up display-4 text-secondary mb-3"></i>
+                        <h5 class="card-title">Order Reports</h5>
+                        <p class="card-text">Generate filtered reports and analytics</p>
+                        <a href="/order-reports" class="btn btn-secondary">
+                            <i class="bi bi-graph-up me-2"></i>
+                            View Reports
+                        </a>
                     </div>
                 </div>
             </div>
