--- a/src/pages/app.html
+++ b/src/pages/app.html
@@ -264,9 +264,12 @@
         </div>
     </div>
 </main>
-<footer class="bg-dark text-light text-center py-3 mt-auto">
-    <p class="mb-0">Online Store.</p>
-</footer>
+<!-- Footer -->
+    <footer class="bg-dark text-light py-3 mt-auto">
+        <div class="container text-center">
+            <p class="mb-0">&copy; 2025 Sales Store</p>
+        </div>
+    </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <script src="/js/utils/jwt.js"></script>
 <script src="/js/utils/api.js"></script>
