--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -12,7 +12,7 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow">
     <div class="container">
-        <a class="navbar-brand fw-bold" href="/">Online Store</a>
+        <a class="navbar-brand fw-bold" href="/">Sales Store</a>
         <div class="d-flex">
             <a href="/login" class="btn btn-outline-light me-2">Login</a>
             <a href="/register" class="btn btn-primary">Register</a>
@@ -22,8 +22,8 @@
 
 <!-- Landing Content -->
 <main class="container d-flex flex-column justify-content-center align-items-center text-center flex-grow-1">
-    <h1 class="display-4 fw-bold mb-3">Welcome to Our Store</h1>
-    <p class="lead text-muted mb-4">Shop the best products with ease and security.</p>
+    <h1 class="display-4 fw-bold mb-3">Welcome to Sales Store</h1>
+    <p class="lead text-muted mb-4">An online store system</p>
     <div>
         <a href="/login" class="btn btn-lg btn-primary me-3">Login</a>
         <a href="/register" class="btn btn-lg btn-outline-secondary">Register</a>
@@ -31,9 +31,11 @@
 </main>
 
 <!-- Footer -->
-<footer class="bg-dark text-light text-center py-3 mt-auto">
-    <p class="mb-0">Online Store.</p>
-</footer>
+    <footer class="bg-dark text-light py-3 mt-auto">
+        <div class="container text-center">
+            <p class="mb-0">&copy; 2025 Sales Store</p>
+        </div>
+    </footer>
 
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
