--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - Online Store</title>
+    <title>Login - Sales Store</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="d-flex flex-column min-vh-100">
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow">
     <div class="container">
-        <a class="navbar-brand fw-bold" href="/">Online Store</a>
+        <a class="navbar-brand fw-bold" href="/">Sales Store</a>
         <div class="d-flex">
             <a href="/login" class="btn btn-outline-light me-2">Login</a>
             <a href="/register" class="btn btn-primary">Register</a>
@@ -34,9 +34,12 @@
         Don't have an account? <a href="/register">Register here</a>
     </p>
 </main>
-<footer class="bg-dark text-light text-center py-3 mt-auto">
-    <p class="mb-0">Online Store.</p>
-</footer>
+<!-- Footer -->
+    <footer class="bg-dark text-light py-3 mt-auto">
+        <div class="container text-center">
+            <p class="mb-0">&copy; 2025 Sales Store</p>
+        </div>
+    </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <script src="/js/utils/jwt.js"></script>
