--- a/src/pages/order-management.html
+++ b/src/pages/order-management.html
@@ -272,7 +272,7 @@
     <!-- Footer -->
     <footer class="bg-dark text-light py-3 mt-auto">
         <div class="container text-center">
-            <p class="mb-0">&copy; 2025 Online Store Admin Panel. All rights reserved.</p>
+            <p class="mb-0">&copy; 2025 Sales Store</p>
         </div>
     </footer>
 
