--- a/src/pages/order-reports.html
+++ b/src/pages/order-reports.html
@@ -181,10 +181,10 @@
         </div>
     </main>
 
-    <!-- Footer -->
+ <!-- Footer -->
     <footer class="bg-dark text-light py-3 mt-auto">
         <div class="container text-center">
-            <p class="mb-0">© 2025 Online Store Admin Panel. All rights reserved.</p>
+            <p class="mb-0">&copy; 2025 Sales Store</p>
         </div>
     </footer>
 
