--- a/src/pages/product-management.html
+++ b/src/pages/product-management.html
@@ -297,11 +297,11 @@
         </div>
     </div>
 
-    <!-- Footer -->
-    <footer class="bg-dark text-light text-center py-3 mt-auto">
-        <p class="mb-0">
-            <i class="bi bi-box-seam me-2"></i>Admin Panel - Product Management
-        </p>
+  <!-- Footer -->
+    <footer class="bg-dark text-light py-3 mt-auto">
+        <div class="container text-center">
+            <p class="mb-0">&copy; 2025 Sales Store</p>
+        </div>
     </footer>
 
     <!-- Scripts -->
