--- a/src/pages/create-order.html
+++ b/src/pages/create-order.html
@@ -32,6 +32,11 @@
                             <i class="bi bi-cart-plus me-1"></i>Create Order
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/order-history">
+                            <i class="bi bi-clock-history me-1"></i>Order History
+                        </a>
+                    </li>
                 </ul>
                 
                 <ul class="navbar-nav">
