--- a/src/pages/product-management.html
+++ b/src/pages/product-management.html
@@ -310,6 +310,20 @@
     <script src="/js/utils/api.js"></script>
     <script src="/js/utils/ui.js"></script>
     <script src="/js/auth/auth.js"></script>
+    <script src="/js/auth/admin-guard.js"></script>
     <script src="/js/admin/product-management.js"></script>
+    <script>
+        // Initialize page with admin guard
+        document.addEventListener('DOMContentLoaded', async function() {
+            const isAuthorized = await adminGuard.init();
+            if (!isAuthorized) {
+                return;
+            }
+            
+            // Initialize product management controller
+            window.productController = new ProductManagementController();
+            await productController.init();
+        });
+    </script>
 </body>
 </html>
