--- a/src/pages/app.html
+++ b/src/pages/app.html
@@ -218,7 +218,7 @@
                                         <i class="bi bi-people fa-2x mb-2"></i>
                                         <h6>Total Users</h6>
                                         <h3 id="totalUsers">--</h3>
-                                        <small>Registered customers</small>
+                                        <small>Registered users</small>
                                     </div>
                                 </div>
                             </div>
