--- a/src/pages/order-management.html
+++ b/src/pages/order-management.html
@@ -13,15 +13,12 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow">
         <div class="container">
             <a class="navbar-brand fw-bold" href="/app">
-                <i class="bi bi-receipt me-2"></i>Order Management
+                <i class="bi bi-arrow-left me-2"></i>Admin Panel
             </a>
-            <div class="d-flex align-items-center">
-                <span class="navbar-text me-3" id="userWelcome">Loading...</span>
-                <a href="/app" class="btn btn-outline-light btn-sm me-2">
-                    <i class="bi bi-house"></i> Dashboard
-                </a>
-                <button class="btn btn-outline-danger btn-sm" id="logoutBtn">
-                    <i class="bi bi-box-arrow-right"></i> Logout
+            <div class="d-flex">
+                <span class="navbar-text me-3" id="adminWelcome">Loading...</span>
+                <button class="btn btn-outline-light" id="logoutBtn">
+                    <i class="bi bi-box-arrow-right me-2"></i>Logout
                 </button>
             </div>
         </div>
